[package]
name = "address_generator"
version = "0.1.0"
authors = ["Mike Winstead <mwinstead3790@gmail.com>"]

[dependencies]
byteorder = "1.0.0"
csv = "0.14"
rand = "0.3"
rocket = "0.2.*"
rocket_contrib = "0.2.*"
rocket_codegen = "0.2.*"
serde = "0.9.*"
serde_derive = "0.9.*"
rustc-serialize = "0.3"


[dev-dependencies]
rocket = { version = "0.2.*", features = ["testing"] }
