[package]
name = "address_generator"
version = "0.1.0"
authors = ["Mike Winstead <mwinstead3790@gmail.com>"]

[dependencies]
byteorder = "1.0.0"
csv = "0.14"
clap = "2.19.0"
rand = "0.3"
rocket = "0.2.*"
rocket_codegen = "0.2.*"
rustc-serialize = "0.3"
serde = "0.9.*"


[dev-dependencies]
rocket = { version = "0.2.*", features = ["testing"] }
